删除了测试相关的 gradle 脚本内容